# AdvancedDataStructures

./: .gitignore  README.md
Framework/: CMakeLists.txt  Definitions.h  HowToUse.md  evaluateInputSizes.sh  main.cpp  runAllBvExamples.sh  runEvaluations.sh
Framework/BalancedParantheses/: DynamicBP.h  InnerBitVector.h  Node.h
Framework/BalancedParentheses/: Definitions.h  DynamicBP.h  InnerBitVector.h  InnerBitVectorByInt.h  Node.h
Framework/BitVector/: Definitions.h  DynamicBitVector.h  InnerBitVector.h  InnerBitVectorByInt.h  Node.h
Framework/Helpers/: Asserts.h  BitVectorProfiler.h  BpProfiler.h
Framework/TestInputs/MoritzBieringBP/: example_tree_all.txt  example_tree_check.txt
Framework/TestInputs/MoritzBieringBP2/: example_tree_all.txt
Framework/TestInputs/bp/: simpleInsertDelete.txt
Framework/TestInputs/bv/: simple.txt
Framework/TestInputs/evaluationBV/: makeInput.py
Framework/TestInputs/officialBP/: example_tree_d6_c5-10.txt
Framework/TestInputs/officialBV/: example_bv_100k.txt  example_bv_10k.txt
Framework/TestInputs/officialBV-old/: example_bv_100k.txt  example_bv_10k.txt
Framework/Tests/: TestBP.h  TestBV.h  TestIntInner.h
Presentation/: adsPresentation.ipe
Presentation/fig/: bp.tex  bpInsertCompareInner.tex  bpQueriesCompareInner.tex  bv.tex  bvByInputSize.tex  bvBySizeCompareInner.tex  bvBySizeCompareInnerRankSelect.tex  bvBySizeCompareInnerZoom.tex  bvBySizeWithIntInner.tex  data.db  score.tex  times.tex
